// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа Company - фильтр 1`] = `
<div
  className="company"
>
  <div
    className="company__name"
  >
    <input
      onClick={[Function]}
      type="button"
      value="МТС"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="company__filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="company__table"
  >
    <div
      className="company__table-title"
    >
      <span
        className="titleLastName"
      >
        Фамилия
      </span>
      <span
        className="titleName"
      >
        Имя
      </span>
      <span
        className="titleMIdName"
      >
        Отчество
      </span>
      <span
        className="titleBalance"
      >
        Баланс
      </span>
      <span
        className="titleActivity"
      >
        Активность
      </span>
      <span
        className="titleEdit"
      >
        Редактировать
      </span>
      <span
        className="titleDelete"
      >
        Удалить
      </span>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Иванов
      </span>
      <span
        className="client__name"
      >
        Иван
      </span>
      <span
        className="client__midName"
      >
        Иванович
      </span>
      <span
        className="client__balance"
      >
        200
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Сидоров
      </span>
      <span
        className="client__name"
      >
        Сидор
      </span>
      <span
        className="client__midName"
      >
        Сидорович
      </span>
      <span
        className="client__balance"
      >
        250
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Петров
      </span>
      <span
        className="client__name"
      >
        Петр
      </span>
      <span
        className="client__midName"
      >
        Петрович
      </span>
      <span
        className="client__balance"
      >
        180
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--blocked"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Григорьев
      </span>
      <span
        className="client__name"
      >
        Григорий
      </span>
      <span
        className="client__midName"
      >
        Григорьевич
      </span>
      <span
        className="client__balance"
      >
        -200
      </span>
      <span
        className="client__activity"
      >
        blocked
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
  </div>
  <input
    className="company__add"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`работа Company - фильтр 2`] = `
<div
  className="company"
>
  <div
    className="company__name"
  >
    <input
      onClick={[Function]}
      type="button"
      value="МТС"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="company__filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="company__table"
  >
    <div
      className="company__table-title"
    >
      <span
        className="titleLastName"
      >
        Фамилия
      </span>
      <span
        className="titleName"
      >
        Имя
      </span>
      <span
        className="titleMIdName"
      >
        Отчество
      </span>
      <span
        className="titleBalance"
      >
        Баланс
      </span>
      <span
        className="titleActivity"
      >
        Активность
      </span>
      <span
        className="titleEdit"
      >
        Редактировать
      </span>
      <span
        className="titleDelete"
      >
        Удалить
      </span>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Иванов
      </span>
      <span
        className="client__name"
      >
        Иван
      </span>
      <span
        className="client__midName"
      >
        Иванович
      </span>
      <span
        className="client__balance"
      >
        200
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Сидоров
      </span>
      <span
        className="client__name"
      >
        Сидор
      </span>
      <span
        className="client__midName"
      >
        Сидорович
      </span>
      <span
        className="client__balance"
      >
        250
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Петров
      </span>
      <span
        className="client__name"
      >
        Петр
      </span>
      <span
        className="client__midName"
      >
        Петрович
      </span>
      <span
        className="client__balance"
      >
        180
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--blocked"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Григорьев
      </span>
      <span
        className="client__name"
      >
        Григорий
      </span>
      <span
        className="client__midName"
      >
        Григорьевич
      </span>
      <span
        className="client__balance"
      >
        -200
      </span>
      <span
        className="client__activity"
      >
        blocked
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
  </div>
  <input
    className="company__add"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`работа Company - фильтр 3`] = `
<div
  className="company"
>
  <div
    className="company__name"
  >
    <input
      onClick={[Function]}
      type="button"
      value="МТС"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="company__filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="company__table"
  >
    <div
      className="company__table-title"
    >
      <span
        className="titleLastName"
      >
        Фамилия
      </span>
      <span
        className="titleName"
      >
        Имя
      </span>
      <span
        className="titleMIdName"
      >
        Отчество
      </span>
      <span
        className="titleBalance"
      >
        Баланс
      </span>
      <span
        className="titleActivity"
      >
        Активность
      </span>
      <span
        className="titleEdit"
      >
        Редактировать
      </span>
      <span
        className="titleDelete"
      >
        Удалить
      </span>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Иванов
      </span>
      <span
        className="client__name"
      >
        Иван
      </span>
      <span
        className="client__midName"
      >
        Иванович
      </span>
      <span
        className="client__balance"
      >
        200
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Сидоров
      </span>
      <span
        className="client__name"
      >
        Сидор
      </span>
      <span
        className="client__midName"
      >
        Сидорович
      </span>
      <span
        className="client__balance"
      >
        250
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
    <div
      className="client client--active"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Петров
      </span>
      <span
        className="client__name"
      >
        Петр
      </span>
      <span
        className="client__midName"
      >
        Петрович
      </span>
      <span
        className="client__balance"
      >
        180
      </span>
      <span
        className="client__activity"
      >
        active
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
  </div>
  <input
    className="company__add"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`работа Company - фильтр 4`] = `
<div
  className="company"
>
  <div
    className="company__name"
  >
    <input
      onClick={[Function]}
      type="button"
      value="МТС"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="company__filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="company__table"
  >
    <div
      className="company__table-title"
    >
      <span
        className="titleLastName"
      >
        Фамилия
      </span>
      <span
        className="titleName"
      >
        Имя
      </span>
      <span
        className="titleMIdName"
      >
        Отчество
      </span>
      <span
        className="titleBalance"
      >
        Баланс
      </span>
      <span
        className="titleActivity"
      >
        Активность
      </span>
      <span
        className="titleEdit"
      >
        Редактировать
      </span>
      <span
        className="titleDelete"
      >
        Удалить
      </span>
    </div>
    <div
      className="client client--blocked"
      onClick={undefined}
    >
      <span
        className="client__lastName"
      >
        Григорьев
      </span>
      <span
        className="client__name"
      >
        Григорий
      </span>
      <span
        className="client__midName"
      >
        Григорьевич
      </span>
      <span
        className="client__balance"
      >
        -200
      </span>
      <span
        className="client__activity"
      >
        blocked
      </span>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Редактировать
      </button>
      <button
        className="client__button"
        onClick={[Function]}
        type="button"
      >
        Удалить
      </button>
    </div>
  </div>
  <input
    className="company__add"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;
